Plays through contents of player and ends gracefully

--- a/src/app/lines/view-explanation/view-explanation.component.html
+++ b/src/app/lines/view-explanation/view-explanation.component.html
@@ -7,6 +7,5 @@
        [@secondaryTextState]="textAnimationState">
     <span>{{line.audioScript}}</span>
   </div>
-  <app-standard-button [@buttonState]="buttonAnimationState"
-    (click)="onDismissLine()">Next</app-standard-button>
+  <app-standard-button (click)="onDismissLine()">Next</app-standard-button>
 </section>
