Replaces lesson player with new player

--- a/src/app/objectives/manage-level-list/manage-level-list.component.html
+++ b/src/app/objectives/manage-level-list/manage-level-list.component.html
@@ -7,4 +7,5 @@
   </mat-select>
 </mat-form-field>
 <app-manage-task-list [tasks]="level.tasks"></app-manage-task-list>
+<button mat-raised-button color="accent" routerLink="/preview/objective/{{objectiveId}}/{{level.id}}">Preview Task</button>
 <hr />
