--- a/src/app/lessons/view-lesson/view-lesson.component.html
+++ b/src/app/lessons/view-lesson/view-lesson.component.html
@@ -1,3 +1,5 @@
+<app-player [content]="playerContent"></app-player>
+<!--
 <section class="mat-typography frame" fxLayout="column" fxLayoutAlign="center center">
   <div class="title-frame" *ngIf="selectedLesson && titleDismissed === false">
     <button
@@ -51,3 +53,4 @@
     <mat-spinner></mat-spinner>
   </div>
 </section>
+-->
