--- a/src/app/player/challenge-task/challenge-task.component.html
+++ b/src/app/player/challenge-task/challenge-task.component.html
@@ -10,6 +10,8 @@
   <div>
     <input class="answer-input"
            [(ngModel)]="studentAnswer"
+           autocorrect="off"
+           autocomplete="off"
            type="text" />
   </div>
   <br />
