--- a/src/app/player/challenge-task/challenge-task.component.html
+++ b/src/app/player/challenge-task/challenge-task.component.html
@@ -12,6 +12,7 @@
            [(ngModel)]="studentAnswer"
            autocorrect="off"
            autocomplete="off"
+           autocapitalize="off"
            type="text" />
   </div>
   <br />
