--- a/src/app/admin/admin-header/admin-header.component.html
+++ b/src/app/admin/admin-header/admin-header.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <a routerLink="/"><span>Project Skeeball</span></a>
+    <a routerLink="/admin"><span>Project Skeeball Administration</span></a>
   </mat-toolbar-row>
 </mat-toolbar>
+<router-outlet></router-outlet>
