Connects login to admin page

--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -4,5 +4,6 @@
     <a routerLink="lessons"><mat-card class="admin-card">Lessons</mat-card></a>
     <a routerLink="vocabulary"><mat-card class="admin-card">Vocabulary</mat-card></a>
     <a routerLink="skills"><mat-card class="admin-card">Skills</mat-card></a>
+    <a routerLink="/"><mat-card class="admin-card">Return to User View</mat-card></a>
   </div>
 </section>
