--- a/src/app/frontend/user-header/user-header.component.html
+++ b/src/app/frontend/user-header/user-header.component.html
@@ -8,6 +8,8 @@
       <li class="main-nav__item"><a routerLink="">Next</a></li>
       <li class="main-nav__item"><a routerLink="">Mission</a></li>
       <li class="main-nav__item"><a routerLink="">Progress</a></li>
+      <li class="main-nav__item"><a routerLink="admin">Admin</a></li>
+      <li class="main-nav__item"><a routerLink="" (click)="onLogout()">Log out</a></li>
     </ul>
   </nav>
   <span *ngIf="isAuth" class="main-nav__reviews">0 Reviews Ready</span>
