Links up player to Next menu on frontend

--- a/src/app/admin/admin-skills/admin-tasks/admin-edit-task/admin-edit-task.component.html
+++ b/src/app/admin/admin-skills/admin-tasks/admin-edit-task/admin-edit-task.component.html
@@ -25,5 +25,28 @@
         type="button"
         (click)="addPatternItem()">Add Pattern Item</button>
     </div>
+    <div *ngIf="lessonList">
+      Lessons
+      <div *ngFor="let lessonId of selectedTask.lessons; let i = index" class="line-container">
+        <div class="line-options">
+          <span>❎</span>
+        </div>
+        <div class="line-number">{{i + 1}} </div>
+        <div class="line-content">
+          <span class="line-type">{{lessonForId(lessonId).name}}</span>
+        </div>
+      </div>
+      <br>
+      <div class="button-row">
+        <mat-form-field>
+          <mat-select placeholder="Add a Lesson" [(value)]="selectedLessonId">
+            <mat-option *ngFor="let lesson of lessonList" [value]="lesson.id">
+              {{lesson.name}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <button mat-mini-fab color="primary" (click)="addLessonToTask()">+</button>
+      </div>
+    </div>
   </div>
 </section>
