Improves styles of frontend

--- a/src/app/frontend/mission/mission.component.html
+++ b/src/app/frontend/mission/mission.component.html
@@ -1,5 +1,5 @@
 <app-user-header></app-user-header>
-<div class="mission">
-  <p>Currently Selected Mission (not implemented)</p>
+<div class="mission mat-typography">
+  <p>Currently Selected Mission is not implemented</p>
   <app-skill-preview *ngFor="let skill of skillList" [skill]="skill"></app-skill-preview>
 </div>
