--- a/src/app/player/player.component.css
+++ b/src/app/player/player.component.css
@@ -4,8 +4,9 @@
 
 .lesson-frame, .title-frame {
   width: 100%;
-  height: 500px;
+  height: 600px;
   margin: 0;
+  padding-top: 80px;
 
   display: flex;
   flex-direction: column;
@@ -18,4 +19,35 @@
 
 .lesson-frame {
   background-color: #fff;
+}
+
+.control-overlay {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  font-family: 'Roboto', san-serif;
+}
+
+.side-icons {
+  display: inline-block;
+  padding: 30px 40px;
+}
+
+.side-icons > div {
+  margin-bottom: 15px;
+  cursor: pointer;
+}
+
+.progress {
+  display: inline-block;
+  vertical-align: top;
+  padding: 30px;
+  width: calc(100% - 279px);
+  text-align: center;
+}
+
+.time {
+  display: inline-block;
+  vertical-align: top;
+  padding: 30px 40px;
 }
