--- a/src/app/player/player-play-lesson-title/player-play-lesson-title.component.css
+++ b/src/app/player/player-play-lesson-title/player-play-lesson-title.component.css
@@ -1,17 +1,25 @@
-.present-text {
-  font-size: 50px;
-  font-weight: bold;
-  margin: 100px 0 50px 0;
+.line-content {
+  text-align: left;
 }
 
-.subtitle-text {
+.lesson-title {
+  margin: 150px 100px 30px 100px;
+  font-size: 60px;
+}
+
+.lesson-subtitle {
+  margin: 0 100px 50px 100px;
   font-size: 18px;
-  padding: 0 100px;
 }
 
-app-standard-button {
-  position: absolute;
-  top: 425px;
-  left: 0;
-  width: 100%;
+.start-lesson-btn {
+  margin: 0 100px 50px 100px;
+  border: none;
+  padding: 20px 35px;
+  font-size: 20px;
+  color: white;
+  background-color: #1c0b6d;
+  border-radius: 35px;
+  cursor: pointer;
 }
+
