--- a/src/app/player/player.component.css
+++ b/src/app/player/player.component.css
@@ -25,7 +25,7 @@
   position: absolute;
   top: 0;
   width: 100%;
-  font-family: 'Roboto', san-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .side-icons {
@@ -50,4 +50,9 @@
   display: inline-block;
   vertical-align: top;
   padding: 30px 40px;
+}
+
+.dark-bg {
+  color: white;
+  background-color: #006fde;
 }
