--- a/src/app/player/player-play-line-explanation/player-play-line-explanation.component.css
+++ b/src/app/player/player-play-line-explanation/player-play-line-explanation.component.css
@@ -1,11 +1,12 @@
 .present-text {
   font-size: 50px;
   font-weight: bold;
-  margin: 100px 0 50px 0;
+  margin: 35px 0 50px 0;
 }
 
 .subtitle-text {
   font-size: 18px;
+  line-height: 24px;
   padding: 0 100px;
 }
 
