--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,5 +1,5 @@
 <section class="mat-typography frame" fxLayout="column" fxLayoutAlign="center center">
-  <div class="control-overlay" [class.dark-bg]="lightOnDarkStyle">
+  <div class="control-overlay" [@controlsState]="bgState">
     <div class="side-icons">
       <div class="home-button" routerLink="/next">
         <i class="material-icons">home</i>
@@ -21,7 +21,7 @@
   </div>
   <div class="lesson-frame"
        fxLayout="column"
-       [class.dark-bg]="lightOnDarkStyle"
+       [@bgState]="bgState"
        *ngIf="contentsLoaded && !done">
     <app-player-play-lesson-title
       *ngIf="loadedPlayerContents[currentItem].type === 'lessonTitle'"
