--- a/src/app/player/player-play-task/player-play-task.component.css
+++ b/src/app/player/player-play-task/player-play-task.component.css
@@ -41,11 +41,12 @@
 }
 
 .answer-input {
-  border: 2px dashed #888;
+  border: 2px solid black;
   padding: 2px 10px;
-  border-radius: 10px;
+  border-radius: 20px;
   font-size: 30px;
   font-family: serif;
-  background: #ffe;
+  background: #fff;
   text-align: center;
+  width: 500px;
 }
