--- a/src/app/player/player-play-task/player-play-task.component.html
+++ b/src/app/player/player-play-task/player-play-task.component.html
@@ -10,6 +10,7 @@
   <div>
     <input class="answer-input"
            [(ngModel)]="studentAnswer"
+           (keyup.enter)="handleEnterPress()"
            autocorrect="off"
            autocomplete="off"
            autocapitalize="off"
