--- a/src/app/player/player-play-vocabulary-quiz/player-play-vocabulary-quiz.component.css
+++ b/src/app/player/player-play-vocabulary-quiz/player-play-vocabulary-quiz.component.css
@@ -12,7 +12,7 @@
 
 .subtitle-text {
   font-size: 18px;
-  padding: 0px 100px;
+  padding: 0 100px;
 }
 
 .question-option {
@@ -41,11 +41,14 @@
 }
 
 .answer-input {
-  border: 2px dashed #888;
+  border: 2px solid black;
   padding: 2px 10px;
-  border-radius: 10px;
+  margin-bottom: 20px;
+  border-radius: 20px;
   font-size: 30px;
   font-family: serif;
-  background: #ffe;
+  background: #fff;
   text-align: center;
+  width: 500px;
+  outline: 0;
 }
