--- a/src/app/player/player-play-vocabulary-quiz/player-play-vocabulary-quiz.component.html
+++ b/src/app/player/player-play-vocabulary-quiz/player-play-vocabulary-quiz.component.html
@@ -1,14 +1,34 @@
 <section class="line-content" *ngIf="fullyLoaded">
-  <app-standard-button (click)="onDismiss()">Next</app-standard-button>
   <div class="present-text">
-    <span>{{lesson.name}}</span> Vocabulary Quiz
+    <span>{{lesson.name}}</span>
   </div>
-  <div class="subtitle-text">
-    <p *ngFor="let vocab of lessonVocabulary">
-      <span>{{vocab.targetRomanization}}: {{vocab.english}}</span>
+  <div class="subtitle-text" *ngIf="currentVocabulary">
+    <p>Get each word correct {{requiredSuccessesPerVocab}} times to continue</p>
+    <p>Enter the romaji for the following English word.</p>
+    <p>
+      <span>{{currentVocabulary.english}}</span>
     </p>
+  </div>
+  <div>
+    <input class="answer-input"
+           [(ngModel)]="studentAnswer"
+           (keyup.enter)="handleEnterPress()"
+           autocorrect="off"
+           autocomplete="off"
+           autocapitalize="off"
+           type="text" />
+  </div>
+  <app-standard-button *ngIf="!isSubmitted"
+    (click)="checkAnswer()">Check Answer</app-standard-button>
+  <div *ngIf="isSubmitted && isCorrect">
+    <p>You are correct! ({{lessonVocabulary[currentIndex].successes}} of {{requiredSuccessesPerVocab}})</p>
+    <app-standard-button (click)="chooseNewVocabulary()">Next Question</app-standard-button>
+  </div>
+  <div *ngIf="isSubmitted && !isCorrect">
+    <p>Oops, you're wrong. The correct answer is "{{currentVocabulary.targetRomanization}}."</p>
+    <app-standard-button (click)="chooseNewVocabulary()">Continue</app-standard-button>
   </div>
 </section>
 <section class="line-content" *ngIf="!fullyLoaded">
-  <p>Loading task... ({{loaded}} of {{toLoad}})</p>
+  <p>Loading quiz... ({{loaded}} of {{toLoad}})</p>
 </section>
